// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input> renders 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#cdd2d4",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 8,
        },
        false,
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="default"
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "color": "#4a4a4a",
            "flex": 1,
            "fontSize": 16,
            "minHeight": 42,
            "paddingHorizontal": 4,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {color} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#cdd2d4",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 8,
        },
        false,
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="default"
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "color": "#4a4a4a",
            "flex": 1,
            "fontSize": 16,
            "minHeight": 42,
            "paddingHorizontal": 4,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {currency} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#cdd2d4",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 8,
        },
        false,
        false,
        false,
        undefined,
      ]
    }
  >
    <View
      pointerEvents="none"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingHorizontal": 4,
        }
      }
    >
      <Text
        _style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 4,
          }
        }
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
            },
            Object {
              "color": "#707070",
            },
            Object {},
          ]
        }
      >
        $
      </Text>
    </View>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="default"
      keyboardType="numeric"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "color": "#4a4a4a",
            "flex": 1,
            "fontSize": 16,
            "minHeight": 42,
            "paddingHorizontal": 4,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          Object {
            "textAlign": "right",
          },
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {disabled} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#cdd2d4",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 8,
        },
        Object {
          "backgroundColor": "#f4f4f4",
        },
        false,
        false,
        false,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={false}
      keyboard="default"
      keyboardType="default"
      multiline={false}
      placeholderTextColor="#707070"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "color": "#4a4a4a",
            "flex": 1,
            "fontSize": 16,
            "minHeight": 42,
            "paddingHorizontal": 4,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          Object {
            "color": "#707070",
          },
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {error} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#cdd2d4",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 8,
        },
        false,
        false,
        false,
        Object {
          "borderColor": "#ef5160",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="default"
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "color": "#4a4a4a",
            "flex": 1,
            "fontSize": 16,
            "minHeight": 42,
            "paddingHorizontal": 4,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <Image
      resizeMode="contain"
      source={1}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "height": 20,
            "width": 20,
          },
          Array [
            Object {
              "alignSelf": "flex-start",
              "height": 18,
              "marginRight": 4,
              "width": 18,
            },
            Object {
              "marginTop": 12,
            },
          ],
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`<Input> when {hint} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#cdd2d4",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 8,
        },
        false,
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="default"
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "color": "#4a4a4a",
            "flex": 1,
            "fontSize": 16,
            "minHeight": 42,
            "paddingHorizontal": 4,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <Text
    numberOfLines={2}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 14,
        },
        Object {
          "color": "#707070",
        },
        Object {
          "marginTop": 4,
          "maxWidth": "100%",
          "paddingLeft": 0,
        },
      ]
    }
  >
    Hello World
  </Text>
</View>
`;

exports[`<Input> when {icon} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#cdd2d4",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 8,
        },
        false,
        false,
        false,
        undefined,
      ]
    }
  >
    <View
      pointerEvents="none"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingHorizontal": 4,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "uri": "email",
          }
        }
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "height": 20,
              "width": 20,
            },
            Object {
              "alignSelf": "flex-start",
              "height": 18,
              "marginRight": 4,
              "width": 18,
            },
            undefined,
          ]
        }
      />
    </View>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="default"
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "color": "#4a4a4a",
            "flex": 1,
            "fontSize": 16,
            "minHeight": 42,
            "paddingHorizontal": 4,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {keyboard} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#cdd2d4",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 8,
        },
        false,
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="numeric"
      keyboardType="numeric"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "color": "#4a4a4a",
            "flex": 1,
            "fontSize": 16,
            "minHeight": 42,
            "paddingHorizontal": 4,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {label} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      undefined,
    ]
  }
>
  <Text
    numberOfLines={2}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 14,
        },
        Object {
          "color": "#707070",
        },
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "marginBottom": 8,
        },
      ]
    }
  >
    Hello World
  </Text>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#cdd2d4",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 8,
        },
        false,
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="default"
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "color": "#4a4a4a",
            "flex": 1,
            "fontSize": 16,
            "minHeight": 42,
            "paddingHorizontal": 4,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {lines} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#cdd2d4",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 8,
        },
        false,
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="default"
      keyboardType="default"
      multiline={true}
      numberOfLines={5}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "color": "#4a4a4a",
            "flex": 1,
            "fontSize": 16,
            "minHeight": 42,
            "paddingHorizontal": 4,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {required} & {requiredIcon} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#cdd2d4",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 8,
        },
        false,
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="default"
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "color": "#4a4a4a",
            "flex": 1,
            "fontSize": 16,
            "minHeight": 42,
            "paddingHorizontal": 4,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <Image
      resizeMode="contain"
      source={1}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "height": 20,
            "width": 20,
          },
          Array [
            Object {
              "alignSelf": "flex-start",
              "height": 18,
              "marginRight": 4,
              "width": 18,
            },
            Object {
              "marginTop": 12,
            },
          ],
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`<Input> when {required} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#cdd2d4",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 8,
        },
        false,
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="default"
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "color": "#4a4a4a",
            "flex": 1,
            "fontSize": 16,
            "minHeight": 42,
            "paddingHorizontal": 4,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      Object {
        "backgroundColor": "rgba(0,255,0,0.25)",
        "padding": 10,
        "width": 256,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#cdd2d4",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 8,
        },
        false,
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="default"
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "color": "#4a4a4a",
            "flex": 1,
            "fontSize": 16,
            "minHeight": 42,
            "paddingHorizontal": 4,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {valid} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#cdd2d4",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 8,
        },
        false,
        Object {
          "borderColor": "#10c0bc",
        },
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="default"
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "color": "#4a4a4a",
            "flex": 1,
            "fontSize": 16,
            "minHeight": 42,
            "paddingHorizontal": 4,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value="soyjavi"
    />
    <View
      style={
        Array [
          Object {
            "borderColor": "#707070",
            "borderRadius": 20,
            "borderWidth": 2,
            "height": 20,
            "width": 20,
          },
          Object {
            "alignItems": "center",
            "backgroundColor": "#10c0bc",
            "borderColor": "#10c0bc",
            "justifyContent": "center",
          },
          Array [
            Object {
              "alignSelf": "flex-start",
              "height": 18,
              "marginRight": 4,
              "width": 18,
            },
            Object {
              "marginTop": 12,
            },
          ],
        ]
      }
    >
      <Image
        resizeMode="contain"
        source={1}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "height": 20,
              "width": 20,
            },
            Object {
              "height": 14,
              "width": 14,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<Input> when {value} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#cdd2d4",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 8,
        },
        false,
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="default"
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "color": "#4a4a4a",
            "flex": 1,
            "fontSize": 16,
            "minHeight": 42,
            "paddingHorizontal": 4,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value="soyjavi"
    />
  </View>
</View>
`;
